k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schedge-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: schedge-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schedge-web
                port:
                  number: 80
